# pglit

./: .env  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
sql/: create_or_drop_db.sql  create_schema.sql  fetch_table_name.sql  set_schema.sql
src/: lib.rs  utils.rs
tests/: pglit.rs  pgtools.rs
tests/sql/: create_table_test.sql  insert_into_table_test.sql
