[package]
name = "pglit"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
authors = ["Youness Bird"]
description = "PostgreSQL's create & drop database tools"
keywords = ["postgreSQL", "database", "createdb", "dropdb"]
license = "MIT/Apache-2.0"
repository = "https://github.com/YounessBird/pglit"
readme = "README.md"



[lib]
doctest = false

[features]
quotes= []

[dependencies]
deadpool-postgres = { version = "0.10.1",features=["serde"] }
derive_more = "0.99.2"
deadpool = "0.9.2"
tokio = { version = "1.17", features = ["macros", "rt"] }


[dev-dependencies]
config = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version ="1.0"}
dotenv = "0.15"
futures = "0.3.1"
tokio-postgres = "0.7.5"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
